fix: added text-align property

--- a/src/components/ProductItem.css
+++ b/src/components/ProductItem.css
@@ -88,12 +88,14 @@ div.product-item
   > p.product-description {
   font-weight: 500;
   color: var(--gray);
+  text-align: justify;
 }
 
 div.product-item > div.container > footer.product-price {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
 }
 
 div.product-item > div.container > footer.product-price > p.price {
